--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
-
+spring.servlet.multipart.max-file-size=-1
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=false
+spring.datasource.sql-script-encoding=UTF-8
+spring.messages.encoding=UTF-8
+server.tomcat.uri-encoding=UTF-8
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/admindb?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=AJn04r5Z.
+spring.thymeleaf.cache=false
+spring.freemarker.cache=false
+spring.groovy.template.cache=false
+######LOGGING#######
+logging.level.org.hibernate.SQL = DEBUG
+logging.level.org.hibernate.type=TRACE
+logging.level.org.springframework.web=INFO
+management.security.enabled=false
+server.error.whitelabel.enabled=false
+server.servlet.session.timeout=600
+server.servlet.session.persistent=false
