--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,9 +13,9 @@ spring.freemarker.cache=false
 spring.groovy.template.cache=false
 ######LOGGING#######
 logging.level.org.hibernate.SQL = DEBUG
-logging.level.org.hibernate.type=TRACE
+#logging.level.org.hibernate.type=TRACE
 logging.level.org.springframework.web=INFO
 management.security.enabled=false
 server.error.whitelabel.enabled=false
-server.servlet.session.timeout=600
-server.servlet.session.persistent=false
+#server.servlet.session.timeout=600
+#server.servlet.session.persistent=false
